--- a/style.css
+++ b/style.css
@@ -134,7 +134,8 @@ body {
     .menu-2:hover .sub-menu {
         opacity: 1;
         top: 75px;
-        
+        background-color: #2c71b8;
+        color: #fff;
         
       }
       .menu-2 li a {
@@ -146,23 +147,7 @@ body {
       .menu-2 li a:hover {
         background-color: white;
         color: #2c71b8;}
-    /* іконка  */
     
-    /* .menu-2::after {
-        content: " ";
-        position: absolute;
-        border: 5px solid;
-        border-color: red transparent transparent transparent;
-        top: 3em;
-        right: 45.5em;
-        
-    }
-
-      .menu-2:hover::after {
-        transform: scaleY(1);
-        border-color: transparent transparent black transparent;
-      } */
-      
       
       .fa-angle-down{
         
@@ -173,5 +158,15 @@ body {
         font-size: 10px;
       }
         
-        
+     
+    
+    .menu-2:hover a{
+        background-color: #2c71b8;
+       color: #fff;
+    }
+    
+    
+    
+     
+     
      
