зробили верхню панель

--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ body {
 .col-md-6 {
     width: 50%;
 }
+.col-md-9{
+    width: 75%;
+}
 
 .header {
     padding: 25px 0;
@@ -78,42 +81,76 @@ body {
 
   }
   
-  /* кнопка пошуку,і корзина */
-  .search {
-    width: 100%;
-    position: relative;
-    display: flex;
-    }
-    .searchTerm {
-    width: 200px;
-    border: 1px solid #2c71b8;
-    padding: 5px;
-    height: 30px;
-    margin-left: 0;
-    margin-top:10px ;
+  /* кнопка пошуку */
+  .header-form-seach{
+      border: 1px solid #2c71b8;
+      height: 40px;
+      position: relative;
+      margin-top:5px ;
+      
+      
+  }
+  .input-text{
+      width: 154px;
+      height: 30px;
+      margin: 4px 0 4px 4px ;
+      border: none;
+      background-color: transparent;
+      color: #2c71b8;
+      Font-size: 21px;
+      
+  }
+  input, textarea {
     outline: none;
-    background-color: #cadbed;
-   
+    border: none;
+    border: solid 1px #f2f2f2;
     }
-    .searchTerm:focus{
-    color: #2c71b8;
-    
-    }
-    .searchButton {
-        position: absolute;
-        display:inline-block ;
-        width:24px;
-        height:24px;
-        background:#2c71b8;
-        color:#fff;
-        border: transparent;
-         margin-top:13px ;
-         margin-left: 64%;
-    
-    }
+  .button-search{
+      height: 30px;
+      width: 30px;
+      border: none;
+      background: #2c71b8;
+      
+      margin: 4px 4px 4px 0;
+      position: absolute;
+  }
     .fa-search{
-        font-size: 10px;
+        font-size: 15px;
+        color: #fff;
     }
+    /* корзина */
+.button-cart{
+    height: 40px;
+    width: 40px;
+    border: none;
+    background: #fff;
+    position: relative;
+    margin-top: 5px;
+}
+.fa-solid {
+    color: #2c71b8;
+    font-size: 20px;
+}
+.product-count{
+    position: absolute;
+    border-radius: 10px;
+    height: 20px;
+    width: 20px;
+    background: #2c71b8;
+    color: #fff;
+    font-size: 13px;
+    top: 20px;
+    margin-left: -10px;
+    
+}
+.product-count p{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
     
     /* випадаюче меню */
     .menu-2 li{
