--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body {
     width: 20px;
     background: #2c71b8;
     color: #fff;
-    font-size: 13px;
+    font-size: 15px;
     top: 20px;
     margin-left: -10px;
     
@@ -201,9 +201,47 @@ body {
         background-color: #2c71b8;
        color: #fff;
     }
-    
-    
-    
-     
-     
-     
+    /* main */
+    .device-menu {
+        border: 1px solid white;
+        width: 270px;
+        height: 850px;
+        margin-left: 40%;
+    }
+    .images{
+        width: 100%;
+        height: 180px;
+        background-color:rgba(255, 255, 255, 0.75) ;
+    }
+    .cart-device{
+        margin-left: 6%;
+        position: relative;
+        border: 1px solid white;
+        width: 25%;
+        height: 650px;
+        background-color: #2c71b8;
+    }
+    .monit{
+        width: 100px;
+        height: 100px;
+        margin-top: 15%;
+        margin-left: 30%;
+        
+    }
+    .button-frames{
+        width: 30px;
+        height: 30px;
+        border: 1px solid #2c71b8;
+        background: transparent;
+        padding-top: 4px;
+        padding-left: 4px;
+                
+    }
+    .frames{
+        width: 20px;
+        height: 20px;
+        
+            }
+    .cart-device-menu{
+        margin-left: 6%;
+    }
