--- a/style.css
+++ b/style.css
@@ -32,11 +32,20 @@ body {
 .col-md-3 {
     width: 25%;
 }
+.col-md-4{
+    width: 33.33333%;
+}
 .col-md-6 {
     width: 50%;
 }
+.col-md-8{
+    width: 66.66667%;
+}
 .col-md-9{
     width: 75%;
+}
+.col-md-12{
+    width: 100%;
 }
 
 .header {
@@ -81,7 +90,7 @@ body {
 
   }
   
-  /* кнопка пошуку */
+  /* ----------------------------------------------кнопка пошуку -------------------------------------------*/
   .header-form-seach{
       border: 1px solid #2c71b8;
       height: 40px;
@@ -118,7 +127,7 @@ body {
         font-size: 15px;
         color: #fff;
     }
-    /* корзина */
+    /* -------------------------------------------------------корзина -------------------------------------------------------*/
 .button-cart{
     height: 40px;
     width: 40px;
@@ -151,8 +160,7 @@ body {
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
-    
-    /* випадаюче меню */
+/* -------------------------------випадаюче меню----------------------------------------------------- */
     .menu-2 li{
         float: none;
         width: 120%;
@@ -201,47 +209,278 @@ body {
         background-color: #2c71b8;
        color: #fff;
     }
-    /* main */
-    .device-menu {
-        border: 1px solid white;
-        width: 270px;
-        height: 850px;
-        margin-left: 40%;
+   
+    /* -----------------------------------------breadcrumbs----------------------------------------- */
+    .breadcrumbs_list li a {
+        margin: 0;
+        padding: 0;
+        text-decoration: none;
+        list-style: none;
+        color: #8fb4d9;
+        font-size: 14px;
+        
     }
-    .images{
-        width: 100%;
-        height: 180px;
-        background-color:rgba(255, 255, 255, 0.75) ;
+    .breadcrumbs_list li span a{
+        color: #8fb4d9;
+        font-size: 14px;
+        text-decoration:underline;
     }
-    .cart-device{
-        margin-left: 6%;
+    .breadcrumbs_list li{
+        display: inline-block;
         position: relative;
+        padding: 24px 0 24px 0;
+    }
+    .breadcrumbs_list li+li{
+        padding-left: 22px;
+    }
+    .breadcrumbs_list li+li::before{
+        content: '>';
+        position: absolute;
+        color: #8fb4d9;
+        left: 7px;
+    }
+    h1{
+        font-size: 48px;
+        color: #fff;
+        font-weight: 600;
+        padding: 0 0 50px 0;
+    }
+    /*--------------------------sort--------------*/
+     .menu-3 {
+        list-style: none;
         border: 1px solid white;
-        width: 25%;
-        height: 650px;
+        height: 40px;
+        background: #2c71b8;
+        padding: 10px;
+       
+    }
+    .sort a{
+        text-decoration: none;
+        color: #f2f2f2;
+        
+    }
+    .menu-3 li{
+        
+        border: 1px solid white;
+        height: 40px;
         background-color: #2c71b8;
+        padding: 10px;
     }
-    .monit{
-        width: 100px;
-        height: 100px;
-        margin-top: 15%;
-        margin-left: 30%;
+    
+        
+    .sub-menu2{
+        position: absolute;
+        left: 76%;
+        width: 330px;
+         opacity: 0;
+         top: -10000px;
+         transition: 0.5s opacity;
+         border: 0px solid transparent;
+         
         
     }
-    .button-frames{
-        width: 30px;
-        height: 30px;
-        border: 1px solid #2c71b8;
-        background: transparent;
-        padding-top: 4px;
-        padding-left: 4px;
-                
-    }
-    .frames{
-        width: 20px;
-        height: 20px;
+    .menu-3:hover .sub-menu2 {
+        opacity: 1;
+        top: 204px;
         
-            }
-    .cart-device-menu{
-        margin-left: 6%;
+        
+      }
+      .sub-menu2 li:hover  {
+          background: #fff;
+            
+      }
+      .sub-menu2 li:hover a {
+        color:#2c71b8;
+          
     }
+    /* ---------------------------------------product img------------------------------- */
+     .product-image{
+         background: #cadbed;
+         width: 270px;
+         height: 180px;
+         position: relative;
+        
+
+     }
+     .device-img{
+         width: 100px;
+         height: 90px;
+        margin: 45px 85px 45px 85px;
+     }
+     
+   .zoom-img{
+    border: 1px solid #2c71b8;
+    width: 30px;
+    height: 30px;
+       display: block;
+       position: absolute;
+       top: 10px; 
+       left: 230px;
+       padding: 5px;
+       opacity: 1;
+       
+      
+       
+   }
+   .zoom-img-2{
+    border: 1px solid #2c71b8;
+    width: 30px;
+    height: 30px;
+       display: block;
+       position: absolute;
+       top: 10px; 
+       left: 230px;
+       padding: 5px;
+       opacity: 0;
+   }
+   .zoom-img-2:hover{
+    background: #2c71b8;
+    width: 30px;
+    height: 30px;
+       display: block;
+       position: absolute;
+       top: 10px; 
+       left: 230px;
+       padding: 5px;
+       opacity: 1;
+   }
+   .zoom-img:hover  {
+       
+      
+       opacity: 0;
+       position: absolute;
+       top: 10px; 
+       left: 230px;
+       width: 30px;
+       height: 30px;
+       padding: 5px;
+      
+       
+       
+      
+       
+   }
+   .like-img{
+       border: 1px solid #2c71b8;
+       width: 30px;
+       height: 30px;
+       position: absolute;
+        top: 52px; 
+        left: 230px;
+        padding: 5px;
+        opacity: 1;
+   }
+   .like-img:hover{
+      
+       
+       width: 30px;
+       height: 30px;
+       position: absolute;
+        top: 52px; 
+        left: 230px;
+        opacity: 0;
+        
+   }
+   
+   .like-img-2{
+   
+    width: 30px;
+    height: 30px;
+    position: absolute;
+     top: 52px; 
+     left: 230px;
+     padding: 5px;
+     opacity: 0;
+}
+.like-img-2:hover{
+   background: #2c71b8;
+    
+    width: 30px;
+    height: 30px;
+    position: absolute;
+     top: 52px; 
+     left: 230px;
+     opacity: 1;
+     
+}
+      
+      /* ---------------------------------------product body------------------------------- */
+.product-body{
+    border: 1px solid   white;
+    background: #2c71b8;
+    color: #fff;
+    width: 270px;
+    height: 473px;
+    padding: 15px 30px 30px 15px;
+}
+.product-body h2{
+    font-size: 30px;
+    font-weight: 600;
+    padding: 0 0 20px 0;
+}
+.product-desc{
+    font-size: 21px;
+    padding: 0 0 15px 0;
+
+}
+.product-features{
+font-size: 21px;
+padding: 0 0 20px 0;
+}
+.product-features span{
+    font-weight: 600;
+}
+.product-price{
+    font-size: 48px;
+    font-weight: 600;
+    padding: 0 40px 20px 40px;
+}
+.btn-more-details{
+    width: 210px;
+    height: 50px;
+    margin: 0 15px 10px 15px;
+    font-size: 21px;
+    border: 1px solid white;
+    color: #fff;
+    background: #2c71b8;
+    
+}
+.btn-more-details:hover{
+  
+    color: #2c71b8;
+    background: #fff;
+
+}
+.btn-add-to-cart{
+    width: 210px;
+    height: 50px;
+    margin: 0 15px 0 15px;
+    font-size: 21px;
+    color: #fff;
+    background: #568dc6;
+    border: none;
+}
+.btn-add-to-cart:hover{
+    color: #568dc6;
+    background: #fff;
+}
+.btn-corz{
+    position: absolute;
+    width: 15px;
+    height: 17px;
+    margin: 4px 0 0 5px;
+    opacity: 1;
+}
+.btn-corz-2{
+    position: absolute;
+    width: 15px;
+    height: 17px;
+    margin: 4px 0 0 5px;
+    opacity: 0;
+}
+.btn-add-to-cart:hover .btn-corz:hover {
+    opacity: 0;
+}
+.btn-add-to-cart:hover .btn-corz-2 {
+    opacity: 1;
+}
