add menu filter 2

--- a/style.css
+++ b/style.css
@@ -538,10 +538,56 @@ padding: 0 0 20px 0;
 .filter{
     width: 270px;
     height: 845px;
-    background: #8fb4d9 ;
-    opacity: 0.6;
+    background: rgb(143, 180, 217,0.6) ;
+   
     margin: 0 30px 0 40px;
     border-right:2px solid white ;
     border-top: #fff;
+    display: block;
+    color: rgb(255, 255, 255,1);
+   
+    
+}
+
+
+.menu-filter-1{
+    color: rgb(255, 255, 255,1);
+    font-size: 21px;
+    position: absolute;
+    
+    
+}
+.menu-filter-1 h3{
+    margin: 34px 0 0 27px;;
+    font-weight: 600;
+    
+}
+label::before{
+    content: "";
+    display: inline-block;
+    margin: 20px 12px 0 29px;
+    width: 10px;
+    height: 10px;
+    border: 1px solid white;
+    cursor: pointer;
+    font-size: 21px;
+    
    
 }
+input[type="checkbox" ]{
+    display: none;
+}
+
+input[type="checkbox"]:checked+label::before{
+    background-color: white;
+}
+.menu-filter-2{
+    color: rgb(255, 255, 255,1);
+    font-size: 21px;
+    position: absolute;
+    margin: 193px 0 0 0;
+    
+}
+.menu-filter-2 h3{
+    margin: 0 0 0 27px;;
+    font-weight: 600;}
