--- a/style.css
+++ b/style.css
@@ -534,6 +534,11 @@ padding: 0 0 20px 0;
 .btn-add-to-cart:hover .btn-corz-2 {
     opacity: 1;
 }
+.load{
+    color: white;
+    font-size: 36px;
+    margin: 45px 0 0 37px;
+}
 /* -------------------------------------------------------фільтер-------------------------------- */
 .filter{
     width: 270px;
@@ -590,4 +595,44 @@ input[type="checkbox"]:checked+label::before{
 }
 .menu-filter-2 h3{
     margin: 0 0 0 27px;;
+    font-weight: 600;
+}
+.menu-filter-3{
+    color: rgb(255, 255, 255,1);
+    font-size: 21px;
+    position: absolute;
+    margin: 472px 0 0 0;
+    
+}
+.menu-filter-3 h3{
+    margin: 0 0 0 27px;;
     font-weight: 600;}
+ .show{
+        margin: 30px 0 30px 37px;
+    }
+.btn-submit{
+    width: 210px;
+    height: 50px;
+    background-color: #2c71b8;
+    border: 1px solid white;
+    color: white;
+    font-size: 21px;
+    font-weight: 600;
+    margin: 0 0 0 30px;
+}
+.btn-submit:hover{
+    background-color: #fff;
+    color: #2c71b8;
+    border: 2px solid #2c71b8;
+}
+.footer .col-md-12{
+    width: 100%;
+    height: 100px;
+    background: #cadbed;
+    color: #2c71b8;
+    margin: 90px 0 0 0;
+    font-size: 21px;
+    text-align: center;
+    padding-top: 40px;
+}
+
