--- a/style.css
+++ b/style.css
@@ -545,7 +545,7 @@ padding: 0 0 20px 0;
     height: 845px;
     background: rgb(143, 180, 217,0.6) ;
    
-    margin: 0 30px 0 40px;
+    margin: 0 0 0 -15px;
     border-right:2px solid white ;
     border-top: #fff;
     display: block;
@@ -625,14 +625,19 @@ input[type="checkbox"]:checked+label::before{
     color: #2c71b8;
     border: 2px solid #2c71b8;
 }
-.footer .col-md-12{
+.footer  {
     width: 100%;
     height: 100px;
     background: #cadbed;
     color: #2c71b8;
-    margin: 90px 0 0 0;
+    margin: 2350px 0 0 0;
     font-size: 21px;
+    
+    
+}
+.footer .col-md-12{
     text-align: center;
+    padding: auto;
     padding-top: 40px;
 }
 
