--- a/style.css
+++ b/style.css
@@ -174,13 +174,14 @@ body {
     font-size: 15px;
     top: 20px;
     margin-left: -10px;
+    padding: 2px 5px;
     
 }
 .product-count p{
     margin: 0;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 49%;
     margin-right: -50%;
     transform: translate(-50%, -50%)
 }
@@ -338,6 +339,25 @@ body {
         
           
     }
+    /*-------------------------slider------------------------*/
+    
+    .slider {
+        height: 400px;
+        line-height: 400px;
+        text-align: center;
+        font-weight: 100;
+        font-size: 100px;
+        letter-spacing: 8px;
+        color: white;
+        
+    }
+  
+    .slick-slide img{
+        display:inline-block;
+    }
+    .slick-prev, .slick-next{
+        top: 38%;
+    }
     /* ---------------------------------------product img------------------------------- */
      .product-image{
          background: #cadbed;
@@ -365,104 +385,45 @@ body {
        margin: 45px 95px 45px 95px;
      }
      
-   .zoom-img{
-    border: 1px solid #2c71b8;
-    width: 30px;
-    height: 30px;
-       display: block;
-       position: absolute;
-       top: 10px; 
-       left: 230px;
-       padding: 5px;
-       opacity: 1;
-       
-      
-       
-   }
-   .zoom-img-2{
-    border: 1px solid #2c71b8;
-    width: 30px;
-    height: 30px;
-       display: block;
-       position: absolute;
-       top: 10px; 
-       left: 230px;
-       padding: 5px;
-       opacity: 0;
-   }
-   .zoom-img-2:hover{
-    background: #2c71b8;
-    width: 30px;
-    height: 30px;
-       display: block;
-       position: absolute;
-       top: 10px; 
-       left: 230px;
-       padding: 5px;
-       opacity: 1;
-   }
-   .zoom-img:hover  {
-       
-      
-       opacity: 0;
-       position: absolute;
-       top: 10px; 
-       left: 230px;
-       width: 30px;
-       height: 30px;
-       padding: 5px;
-      
-       
-       
-      
-       
-   }
-   .liked{
-       background-color: #2c71b8;
-   }
-   .like-img{
-       border: 1px solid #2c71b8;
-       width: 30px;
-       height: 30px;
-       position: absolute;
-        top: 52px; 
-        left: 230px;
-        padding: 5px;
-        opacity: 1;
-   }
-   .like-img:hover{
-      
-       
-       width: 30px;
-       height: 30px;
-       position: absolute;
-        top: 52px; 
-        left: 230px;
-        opacity: 0;
-        
-   }
-   
-   .like-img-2{
-   
-    width: 30px;
-    height: 30px;
-    position: absolute;
-     top: 52px; 
-     left: 230px;
-     padding: 5px;
-     opacity: 0;
-}
-.like-img-2:hover{
-   background: #2c71b8;
+     .product-img-btn {
+        width: 30px;
+        height: 30px;
+        background-color: transparent;
+        border: 1px solid #2c71b8;
+        cursor: pointer;
+        position: absolute;
+        transition: 0.3s;
+    }
+    .scale {
+        top: 10px;
+        right: 10px;
+        background-image: url(images/frames1.png);
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+    .like {
+        top: 50px;
+        right: 10px;
+        background-image: url(images/heart1.png);
+        background-position: center;
+        background-repeat: no-repeat;
+    }
     
-    width: 30px;
-    height: 30px;
-    position: absolute;
-     top: 52px; 
-     left: 230px;
-     opacity: 1;
-     
-}
+   
+    .scale:hover,.scales {
+        background-image: url(images/frames2.png);
+        background-color: #2c71b8;
+    }
+    .like:hover,.liked {
+        background-image: url(images/heart2.png);
+        background-color: #2c71b8;
+    }
+    .liked{
+        
+    }
+    .scales{
+       
+    }
       
       /* ---------------------------------------product body------------------------------- */
 .product-body{
@@ -658,7 +619,7 @@ input[type="checkbox"]:checked+label::before{
 .modal {
     position: fixed;
     top:0;
-    left:0;
+    left:-10зч;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
@@ -691,7 +652,8 @@ input[type="checkbox"]:checked+label::before{
 }
 .show{
     display: block;
+    margin: 0;
 }
-.hiden{
+.hide{
     display: none;
 }
